[package]
name = "rustyhip"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RustyHip is a lambda front end providing Sqlite-like database over S3"
authors = ["monkut <monkut@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/monkut/rustyhip"
keywords = ["rust"]
categories = []
license = "LicenseRef-KICONIAWORKS-Customers"
publish = false

[lib]
name = "rustyhip"
path = "src/lib.rs"

[[bin]]
name = "rustyhip"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
time = { version = "0.3", features = ["formatting"] }
lambda_http = { version = "0.13", default-features = false, features = ["apigw_rest", "apigw_http", "tracing"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35" }
turbolite = { version = "0.4", git = "https://github.com/russellromney/turbolite", rev = "c05ad99b899d5dc0270d0c6f41aa3f4554f3b31d", features = ["zstd", "tiered", "bundled-sqlite"] }

[dev-dependencies]
tempfile = "3"

# ----------------------------------------------------------------------------
# Lints — rustc + clippy, surfaced in Cargo.toml (RFC 3389, stable since 1.74).
# Override a single lint with `[lints.clippy] <name> = "allow"`.
# `priority = -1` on a group keeps individual allow/deny lines above it intact.
# ----------------------------------------------------------------------------
[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
# Pedantic / nursery noise — opt out here, not in source.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

# ----------------------------------------------------------------------------
# Profiles — keep release binaries lean, dev builds fast.
# ----------------------------------------------------------------------------
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1          # line tables only — fast incremental builds
opt-level = 0
split-debuginfo = "unpacked"
